MilestoneRFAFullSandBox/src/objects/CM_FinalApprovalMailGroup__c.object
<CustomObject>
    <description>最終承認メール送信グループ
Final approval mail sending group</description>
    <fields>
        <fullName>CM_Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>B. Approval of Customer Terms and Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Credit Terms / Policies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Company_receiving_after_approval_mail__c</fullName>
        <label>Company receiving after approval mail</label>
        <picklist>
            <picklistValues>
                <fullName>TONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIKUNI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOKYO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCCJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UVXN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FVS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FVCe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCEJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_OpenCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>チェックを付けると、他のユーザから参照可能となります。</inlineHelpText>
        <label>open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_Sub_Category1__c</fullName>
        <label>Sub Category1</label>
        <picklist>
            <controllingField>CM_Category__c</controllingField>
            <picklistValues>
                <fullName>1. Approval of Field Sales Operation and VM Customer Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Approval of Customer Agreement for CS KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Approval of Customer Agreement for Food KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Approval of Customer Agreement for SAKAYA KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Approval of Customer Agreement for VM Corporate Sales&amp;Hunter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Approval of Customer Agreement for Corporate KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Approval of Customer Agreement for FV - VM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Approval of Customer Agreement for FV - OCS, Shop Caffe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Approval of Customer Agreement for FV - Corporate Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Initial setting of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Changes of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Credit period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Sub_Category2__c</fullName>
        <label>Sub Category2</label>
        <picklist>
            <controllingField>CM_Sub_Category1__c</controllingField>
            <picklistValues>
                <fullName>01. Contract unit price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02. Special price / Promotion discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03. FS selling price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04. FS commission (Variable)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05. FS commission (Fixed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06. Key money / Rebate / Spot / Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07. Only in the case of Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08. Other support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09. Promotion / Other expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Promotion (Cooperation / Sampling)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Non-standard Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Vending Equipment parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Incidental work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d. Vending Equipment Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e. Equipment retirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Amount of Credit limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Credit limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Credit period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Sub_Category3__c</fullName>
        <label>Sub Category3</label>
        <picklist>
            <controllingField>CM_Sub_Category2__c</controllingField>
            <picklistValues>
                <fullName>≦ 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create less risk to the company (shortening credit terms) &gt; 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create more risk to the company (lengthening credit terms) &gt; 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create more risk to the company (lengthening credit terms) &gt; 10,000,000 yen (Initial credit limit &gt; 25,000,000 yen and change is &gt; 25%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Terms &gt; 1 month and &lt; 2 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Terms ≧ 2 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>最終承認メール送信グループ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CM_Category__c</columns>
        <columns>CM_OpenCheck__c</columns>
        <columns>CM_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Fixed_Group_View</fullName>
        <columns>NAME</columns>
        <columns>CM_Category__c</columns>
        <columns>CM_Sub_Category1__c</columns>
        <columns>CM_Sub_Category2__c</columns>
        <columns>CM_Sub_Category3__c</columns>
        <columns>CM_OpenCheck__c</columns>
        <columns>CM_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CM_FinalApprovalMailGroup__c.Fixed_Group_Member</value>
        </filters>
        <label>Fixed Group</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IN00000008w31MAA_00NN0000000v4N8MAI</fullName>
        <active>true</active>
        <field>CM_FinalApprovalMailDestination__c.CM_FinalApprovalMailGroup__c</field>
        <filterItems>
            <field>CM_FinalApprovalMailGroup__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Standard Group Member</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Final Approval mail destination_Final ap</name>
    </namedFilters>
    <recordTypes>
        <fullName>Fixed_Group_Member</fullName>
        <active>true</active>
        <description>固定で設定されるグループを登録します。</description>
        <label>Fixed Group Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Group_Member</fullName>
        <active>true</active>
        <description>各ユーザ毎にグループをカスタマイズします。</description>
        <label>Standard Group Member</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>